# insilico-tabicl

./: .gitignore  CLAUDE.md  DOCKER_USAGE.md  Dockerfile  PLANNING.md  RESULTS.md  TASK.md  TEST_RESULTS.md  execute_phmrc_task.js  package-lock.json  package.json  pyproject.toml  research.md
.claude/: README.md  package.json  swarm-config.json
.claude/agents/core/: expert-orchestrator.md
.claude/agents/experts/: openva-insilico-expert.md  tabicl-expert.md  va-data-relationship-analyst.md
.claude/agents/specialists/: coordinator.md  data-processor.md  model-trainer.md  researcher.md
.claude/agents/templates/: task-processor.md
.claude/agents/validation/: data-root-cause-analyst.md  ml-rootcause-expert.md  pipeline-authenticity-validator.md
.claude/commands/: execute-prp.md  generate-prp.md  init.md
.claude/communication/: MessageBus.js
.claude/coordination/: TaskOrchestrator.js
.claude/core/: Agent.js  HiveMind.js  Logger.js  cli.js
.claude/db/: db-setup.js  memory.db  schema.sql
.claude/memory/: DistributedMemory.js  TaskContext.js
.claude/scripts/: swarm-orchestrator.sh
PRPs/: TASK-001_phmrc_child_exploration.md  claude-flow-integretion.md
PRPs/templates/: prp_base.md
models/: __init__.py  insilico_model.py  model_config.py  model_validator.py  tabicl_config.py  tabicl_model.py  xgboost_config.py  xgboost_enhanced_config.py  xgboost_model.py
