[tool.poetry]
name = "ml-pipeline"
version = "0.1.0"
description = "Modular, parallel-DAG machine learning pipeline for structured data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
prefect = "^3.4.1"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.0"
optuna = "^3.5.0"
numpy = "^1.26.0"
joblib = "^1.3.0"
ray = {extras = ["tune"], version = "^2.48.0"}
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
interpret = "^0.6.10"
pandera = "^0.23.1"
pyyaml = "^6.0.2"
pydantic = "^2.10.0"
tqdm = "^4.67.1"
tabicl = "^0.1.0"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.12.4"
pandas-stubs = "^2.3.0.250703"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "va_data.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E402",  # Module level import not at top of file (needed for sys.path modifications)
]
